--- a/jph-sample/package.json
+++ b/jph-sample/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.10",
     "bootstrap-vue": "2.1.0",
     "vue-awesome": "4.0.2",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "axios": "0.19.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
